# Deep-Learning-Projects---News-Recommendation-Systems

./: .gitignore  README.md
.conda/conda-meta/: history
.conda/etc/: aau_token
code/: azurefoo.py  datafoo.py  datafoo_pytorch.py  dummyModel.ipynb  foo.py  job1.sh  job_astrid.sh  modelfoo.py  modelfoo_python.py  modelfoo_pytorch.py  modelfoo_pytorch_work.py  plot_foo.py  pyproject.toml  test.py  testfoo.py  tokenizerfoo.py
code/evaluation/: _ba_test.py  beyond_accuracy.py  metrics_protocols.py  utils.py
code/jobs/: job_astrid.sh
code/models/: data_helper.py  data_helper_work.py  dataloader.py  dataloader_pytorch.py  evaluation.py  layers_pytorch.py  model_config.py  nrms.py  nrms_pytorch.py  train.py
code/utils/: _article_behaviors.py  _articles.py  _azure.py  _behaviors.py  _gen.py  _nlp.py  _polars.py  _python.py  constants.py
