[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["astridlh <75378190+astridlh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
