[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["astridlh <75378190+astridlh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
seaborn = "^0.13.2"
polars = "^1.12.0"
tensorflow = "2.16.2"
tqdm = "^4.67.0"
pyyaml = "^6.0.2"
transformers = "^4.46.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
